--- a/styles/recipe-style.css
+++ b/styles/recipe-style.css
@@ -1,4 +1,30 @@
+* {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+h1 {
+    margin: auto;
+    width: 620px;
+    margin-bottom: 10px;
+    background-color: rgb(248, 248, 123);
+    text-align: center;
+}
+
 img {
     width: 400px;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.recipe-card {
+    width: 500px;
+    margin: auto;
+}
+
+.recipe-card h2 {
+    text-align: center;
+    background-color: aquamarine;
+    padding: 10px;
 }
