--- a/styles/recipe-style.css
+++ b/styles/recipe-style.css
@@ -8,10 +8,11 @@ h1 {
     margin-bottom: 10px;
     background-color: rgb(248, 248, 123);
     text-align: center;
+    font-size: 60px;
 }
 
 img {
-    width: 400px;
+    width: 450px;
     height: auto;
     margin-left: auto;
     margin-right: auto;
@@ -23,8 +24,22 @@ img {
     margin: auto;
 }
 
+.recipe-link {
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
 .recipe-card h2 {
     text-align: center;
     background-color: aquamarine;
     padding: 10px;
+    font-size: 32px;
+    font-family: monospace;
 }
+
+.recipe-card h2,
+h1,
+img {
+    border: 3px solid rgb(0, 0, 0);
+}
+
