--- a/styles/recipe-style.css
+++ b/styles/recipe-style.css
@@ -3,9 +3,9 @@
 }
 
 h1 {
-    margin: auto;
+    margin: 26px auto;
     width: 620px;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
     background-color: rgb(248, 248, 123);
     text-align: center;
     font-size: 60px;
@@ -14,9 +14,8 @@ h1 {
 img {
     width: 450px;
     height: auto;
-    margin-left: auto;
-    margin-right: auto;
     display: block;
+    margin: 26px auto;
 }
 
 .recipe-card {
