--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -18,14 +18,17 @@ h1 {
 ul {
     list-style: none;
     display: flex;
+    gap: 8px;
 }
 
 ul li {
     background-color: white;
-    height: 90px;
-    margin: auto 6px;
     border: 3px solid black;
-    padding: 16px;
+    padding: 12px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .index-container {
